--- a/1Post.html
+++ b/1Post.html
@@ -18,7 +18,7 @@
         </nobr>
     </header>
 
-    <section>
+    <div>
         <article>
             
             <h2>This is me</h2>
@@ -28,5 +28,5 @@
             </p>
 
         </article>
-    </section>
+    </div>
 </body>
