--- a/1Post.html
+++ b/1Post.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>ImG</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="immagini/icon.png" >
 </head>
 <body>
     <header>
@@ -13,6 +14,7 @@
                 <ul>
                     <li><a href = "index.html">Home</a></li>
                     <li><a href = "1Post.html">This is me</a></li>
+                    <li><a href = "contacts.html">Contacts</a></li>
                 </ul>
             </nav>
         </nobr>
@@ -24,7 +26,7 @@
             <h2>This is me</h2>
 
             <p>
-                Hello.  What&apos;s the correct point of view from which I should define myself?  What is a good starting question to define something as complex as a human being?  I have struggled a lot in the past to find answers to these questions, and one day, some time ago, I came across a psychology speech. I think Professor Brian Little, in his TedTalk, has a point.  The point I am referring to is explained by the quote: "Don't ask people how they are, ask them what their project for life is." It may seem like a trivial concept, but is it really that simple?  Professor also explains that what defines us are certain common traits like introversion or extroversion, but those are characteristics that could define both us and other people. What defines us uniquely as human beings? Ask yourself that question. According to professor Little (and actually to me) a good answer might be: what we choose as the meaning of our life, our projects, the things that take us outside of our usual selves, outside of our comfort zone.  So, who am I? This has not been a constant thing throughout my life, and surely it will change again, but one thing is certain: I have wanted to open a blog, write, make videos for a long time. So, now, here I am...
+                Hello guys, welcome to my blog, let&apos;s start.<p></p>What&apos;s the correct point of view from which I should define myself?<br>What is a good starting question to define something as complex as a human being?<p></p>I have struggled a lot in the past to find answers to these questions, and one day, some time ago, I came across a psychology speech. I think Professor Brian Little, in his TedTalk, has a point.<p></p>The point I am referring to is explained by the quote: "Don't ask people how they are, ask them what their project for life is." It may seem like a trivial concept, but is it really that simple?<p></p>Professor also explains that what defines us are certain common traits like introversion or extroversion, but those are characteristics that could define both us and other people. What defines us uniquely as human beings? Ask yourself that question. According to professor Little (and actually to me) a good answer might be: what we choose as the meaning of our life, our projects, the things that take us outside of our usual selves, outside of our comfort zone.<p></p>So, who am I? This has not been a constant thing throughout my life, and surely it will change again, but one thing is certain: I have wanted to open a blog, write, make videos for a long time. So, now, here I am...
             </p>
 
         </article>
