--- a/contacts.html
+++ b/contacts.html
@@ -19,4 +19,22 @@
             </nav>
         </nobr>
     </header>
+
+    <div id="contacts">
+        <h2>
+            Where to find me
+        </h2>
+        
+        <img src="immagini/me.png" alt="Picture of me" id="me">
+        
+        <p>
+            @ImG_
+        </p>
+        <p>
+            @ImG_
+        </p>
+        <p>
+            Email: giovannibonini_@outlook.it
+        </p>
+    </div>
 </body>
