--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>IMG</h1>
+        <a href="index.html" id="img"><h1>IMG</h1></a>
         <nobr>
             <nav>
                 <h2>Index</h2>
