--- a/contacts.html
+++ b/contacts.html
@@ -22,9 +22,11 @@
     </header>
 
     <div>
-        <h2>
-            Where to find me
-        </h2>
+        <nobr>
+            <h2>
+                Where to find me
+            </h2>
+        </nobr>
         
         <img src="immagini/me.png" alt="Picture of me" id="me">
         
