--- a/contacts.html
+++ b/contacts.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>ImG</title>
-    <link rel="stylesheet" href="css/contactstyle.css">
+    <title>G &#183; blog</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contactstyle.css">
     <link rel="icon" href="immagini/icon.png" >
 </head>
 <body>
     <header>
-        <a href="index.html" id="img"><h1>IMG</h1></a>
+        <a href="index.html" id="img"><h1>G&#183;blog</h1></a>
         <nobr>
             <nav>
                 <h2>Index</h2>
@@ -22,11 +22,6 @@
     </header>
 
     <div>
-        <nobr>
-            <h2>
-                Where to find me
-            </h2>
-        </nobr>
         
         <img src="immagini/me.png" alt="Picture of me" id="me">
         
