--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>ImG</title>
+    <title>G &#183; blog</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="immagini/icon.png" >
 </head>
 <body>
     <header>
-        <a href="index.html" id="img"><h1>IMG</h1></a>
+        <a href="index.html" id="img"><h1>G&#183;blog</h1></a>
         <nobr>
             <nav>
                 <h2>Index</h2>
@@ -19,4 +19,18 @@
             </nav>
         </nobr>
     </header>
+    <div>
+        <a href="1Post.html" class="linkHome">
+            <figure>
+                <figcaption class="linkHome">This is me</figcaption>
+                <img src="immagini/this_is_me.png" alt="Picture of me (link to the first article)" id="link-1Post">
+            </figure>
+        </a>
+        <a href="contacts.html" class="linkHome">
+            <figure>
+                <figcaption class="linkHome">Where to find me</figcaption>
+                <img src="immagini/picture_of_me.png" alt="Picture of me (link to the contacts page)" id="Foto-Home">
+            </figure>
+        </a>
+    </div>
 </body>
