--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="1Post.html" class="linkHome">
             <figure>
                 <figcaption class="linkHome">This is me</figcaption>
-                <img src="immagini/this_is_me.png" alt="Picture of me (link to the first article)" id="link-1Post">
+                <img src="immagini/this_is_me.jpg" alt="Picture of me (link to the first article)" id="link-1Post">
             </figure>
         </a>
         <a href="contacts.html" class="linkHome">
