--- a/index.html
+++ b/index.html
@@ -26,11 +26,25 @@
                 <img src="immagini/this_is_me.jpg" alt="Picture of me (link to the first article)" id="link-1Post">
             </figure>
         </a>
-        <a href="contacts.html" class="linkHome">
-            <figure>
-                <figcaption class="linkHome">Where to find me</figcaption>
-                <img src="immagini/picture_of_me.png" alt="Picture of me (link to the contacts page)" id="Foto-Home">
+    </div>
+    <footer>
+        <a href="https://www.youtube.com/" class="s">
+            <figure class="footer">
+                <img src="immagini/youtube.png" alt="youtube icon link" class="simg">
+                <figcaption>@ImG_</figcaption>
             </figure>
         </a>
-    </div>
+        <a href="https://twitter.com/home" class="s">
+            <figure class="footer">
+                <img src="immagini/twitter.png" alt="twitter icon link" class="simg">
+                <figcaption>@ImG_</figcaption>
+            </figure>
+        </a>
+        <a href = mailto:giovannibonini_@outlook.it class="s">
+            <figure class="footer">
+                <img src="immagini/email.png" alt="email icon link" class="simg">
+                <figcaption>giovannibonini_@outlook.it</figcaption>
+            </figure>
+        </a>
+    </footer>
 </body>
