--- a/contacts.html
+++ b/contacts.html
@@ -26,21 +26,21 @@
         <img src="immagini/me.png" alt="Picture of me" id="me">
         
         <section>
-            <a href="https://www.youtube.com/" id="s">
+            <a href="https://www.youtube.com/" class="s">
                 <figure>
-                    <img src="immagini/youtube.png" alt="youtube icon link">
+                    <img src="immagini/youtube.png" alt="youtube icon link" class="simg">
                     <figcaption>@ImG_</figcaption>
                 </figure>
             </a>
-            <a href="https://twitter.com/home" id="s">
+            <a href="https://twitter.com/home" class="s">
                 <figure>
-                    <img src="immagini/twitter.png" alt="twitter icon link">
+                    <img src="immagini/twitter.png" alt="twitter icon link" class="simg">
                     <figcaption>@ImG_</figcaption>
                 </figure>
             </a>
-            <a href = mailto:giovannibonini_@outlook.it id="s">
+            <a href = mailto:giovannibonini_@outlook.it class="s">
                 <figure>
-                    <img src="immagini/email.png" alt="email icon link">
+                    <img src="immagini/email.png" alt="email icon link" class="simg">
                     <figcaption>giovannibonini_@outlook.it</figcaption>
                 </figure>
             </a>
