--- a/1Post.html
+++ b/1Post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head>
+<head lang="en">
     <meta charset="UTF-8">
     <title>G &#183; blog</title>
     <link rel="stylesheet" href="css/style.css">
