--- a/1Post.html
+++ b/1Post.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head lang="en">
+<html lang="en">
+    
+<head>
     <meta charset="UTF-8">
     <title>G &#183; blog</title>
     <link rel="stylesheet" href="css/style.css">
@@ -28,3 +30,5 @@
         </p>
     </div>
 </body>
+    
+</html>
