--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head lang="en">
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <title>G &#183; blog</title>
     <link rel="stylesheet" href="css/style.css">
@@ -48,3 +50,5 @@
         </a>
     </footer>
 </body>
+    
+</html>
