--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="img"><h1>G&#183;blog</h1></a>
+        <a href="index.html" id="img"><h1>G blog</h1></a>
         <nobr>
             <nav>
                 <h2>Index</h2>
@@ -27,16 +27,22 @@
         <img src="immagini/me.png" alt="Picture of me" id="me">
         
         <section>
-            <a href="https://www.youtube.com/" class="s">
+            <a href="https://www.youtube.com/channel/UCfExDGfmU_O6RYtK1a94UuA" class="s">
                 <figure>
                     <img src="immagini/youtube.png" alt="youtube icon link" class="simg">
-                    <figcaption>@ImG_</figcaption>
+                    <figcaption>@ImGImG47</figcaption>
                 </figure>
             </a>
-            <a href="https://twitter.com/home" class="s">
+            <a href="https://twitter.com/ImGImG47" class="s">
                 <figure>
                     <img src="immagini/twitter.png" alt="twitter icon link" class="simg">
-                    <figcaption>@ImG_</figcaption>
+                    <figcaption>@ImGImG47</figcaption>
+                </figure>
+            </a>
+            <a href = "https://www.linkedin.com/in/giovanni-bonini-ab653719b/" class="s">
+                <figure>
+                    <img src="immagini/linkedin.png" alt="Linkedin icon link" class="simg">
+                    <figcaption>@GiovanniBonini</figcaption>
                 </figure>
             </a>
             <a href = mailto:giovannibonini_@outlook.it class="s">
