--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="img"><h1>G&#183;blog</h1></a>
+        <a href="index.html" id="img"><h1>G blog</h1></a>
         <nobr>
             <nav>
                 <h2>Index</h2>
@@ -23,30 +23,38 @@
     <div>
         <a href="1Post.html" class="linkHome">
             <figure>
-                <figcaption class="linkHome">This is me</figcaption>
+                <figcaption>This is me</figcaption>
                 <img src="immagini/this_is_me.jpg" alt="Picture of me (link to the first article)" id="link-1Post">
             </figure>
         </a>
     </div>
     <footer>
-        <a href="https://www.youtube.com/" class="s">
-            <figure class="footer">
-                <img src="immagini/youtube.png" alt="youtube icon link" class="simg">
-                <figcaption>@ImG_</figcaption>
-            </figure>
-        </a>
-        <a href="https://twitter.com/home" class="s">
-            <figure class="footer">
-                <img src="immagini/twitter.png" alt="twitter icon link" class="simg">
-                <figcaption>@ImG_</figcaption>
-            </figure>
-        </a>
-        <a href = mailto:giovannibonini_@outlook.it class="s">
-            <figure class="footer">
-                <img src="immagini/email.png" alt="email icon link" class="simg">
-                <figcaption>giovannibonini_@outlook.it</figcaption>
-            </figure>
-        </a>
+        <section>
+            <a href="https://www.youtube.com/channel/UCfExDGfmU_O6RYtK1a94UuA" class="s">
+                <figure>
+                    <img src="immagini/youtube.png" alt="youtube icon link" class="simg">
+                    <figcaption>@ImGImG47</figcaption>
+                </figure>
+            </a>
+            <a href="https://twitter.com/ImGImG47" class="s">
+                <figure>
+                    <img src="immagini/twitter.png" alt="twitter icon link" class="simg">
+                    <figcaption>@ImGImG47</figcaption>
+                </figure>
+            </a>
+            <a href = "https://www.linkedin.com/in/giovanni-bonini-ab653719b/" class="s">
+                <figure>
+                    <img src="immagini/linkedin.png" alt="Linkedin icon link" class="simg">
+                    <figcaption>@GiovanniBonini</figcaption>
+                </figure>
+            </a>
+            <a href = mailto:giovannibonini_@outlook.it class="s">
+                <figure>
+                    <img src="immagini/email.png" alt="email icon link" class="simg">
+                    <figcaption>giovannibonini_@outlook.it</figcaption>
+                </figure>
+            </a>
+        </section>
     </footer>
 </body>
     
