--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>G &#183; blog</title>
+    <title>G blog</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="immagini/icon.png" >
 </head>
