--- a/1Post.html
+++ b/1Post.html
@@ -36,6 +36,35 @@
         </p>
 
     </article>
+    
+    <footer>
+        <section>
+            <a href="https://www.youtube.com/channel/UCfExDGfmU_O6RYtK1a94UuA" class="s">
+                <figure>
+                    <img src="immagini/youtube.png" alt="youtube icon link" class="simg">
+                    <figcaption>@ImGImG47</figcaption>
+                </figure>
+            </a>
+            <a href="https://twitter.com/ImGImG47" class="s">
+                <figure>
+                    <img src="immagini/twitter.png" alt="twitter icon link" class="simg">
+                    <figcaption>@ImGImG47</figcaption>
+                </figure>
+            </a>
+            <a href = "https://www.linkedin.com/in/giovanni-bonini-ab653719b/" class="s">
+                <figure>
+                    <img src="immagini/linkedin.png" alt="Linkedin icon link" class="simg">
+                    <figcaption>@GiovanniBonini</figcaption>
+                </figure>
+            </a>
+            <a href = mailto:giovannibonini_@outlook.it class="s">
+                <figure>
+                    <img src="immagini/email.png" alt="email icon link" class="simg">
+                    <figcaption>giovannibonini_@outlook.it</figcaption>
+                </figure>
+            </a>
+        </section>
+    </footer>
 </body>
     
 </html>
