--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="immagini/icon.png" >
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0K9TSPSL4K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0K9TSPSL4K');
+</script>
+
 <body>
     <header>
         <a href="index.html" id="img"><h1>G blog</h1></a>
