--- a/1Post.html
+++ b/1Post.html
@@ -43,45 +43,46 @@
         </h3>
         
         <p>
-            <section>
             <p>
-                Honestly, I find it particularly difficult to write this introductory post. 
-                Thinking about how to begin, I ask myself many questions: 
-                <q>What is the correct point of view from which I should define myself? 
-                How is it possible to define something as complex as a human being?</q> 
-                I’ve struggled in the past to find answers to these questions.
+                Honestly I find it particularly difficult to write this introductory post.
             </p>
 
             <p>
-                One day, some years ago, I came across a psychology speech, and I think Professor Brian Little has a point.
+                Thinking about how to begin I ask myself a lot of questions: 
+                “What is the correct point of view from wich I should define myself? 
+                How is it possible to define something as complex as a human being?”. 
+                I’ve struggled in the past to find answers to this questions.
             </p>
 
-            <blockquote cite="#">
-                <p>“Don’t ask people who they are, ask them what their project for life is.”</p>
-            </blockquote>
+            <p>
+                One day, some years ago, I came across a psychology speech and I think Professor Brian Little has a point.
+            </p>
 
             <p>
+                The point I am referring to is explained by the quote: 
+                “Don’t ask people who they are, ask them what their project for life is.” 
                 It may seem like a trivial concept, but is it really that simple?
             </p>
 
             <p>
-                In his speech, Dr. Little explains that what defines us are certain common traits, 
-                such as introversion or extroversion. However, these characteristics could define both us and other people. 
+                In his speech Dr. Little also explains that what defines us are certain common traits like introversion or extroversion, 
+                but those are characteristics that could define both us and other people. 
                 What defines us uniquely as human beings? Ask yourself that question.
             </p>
 
             <p>
-                According to Professor Little (and I see why he thinks that), a good answer might be this: 
-                what defines us is what we choose as the meaning of our life — our projects, 
-                the things that take us outside of our usual selves, beyond our comfort zone.
+                According to professor Little (and I see why he think that) a good answer to that question might be: 
+                what defines us is what we choose as the meaning of our life, our projects, 
+                the things that take us outside of our usual selves, outside of our comfort zone.
             </p>
 
             <p>
-                So, who am I? This has not been a constant throughout my life, and surely it will change again. 
-                But one thing is certain: I have always wanted to open a blog, write, and spark my creativity. 
-                So, now... here I am.
+                So, who am I? This has not been a constant thing throughout my life, 
+                and surely it will change again, but one thing is certain: 
+                I have always wanted to open a blog, write, and spark my creativity. 
+                So, now. Here I am...
             </p>
-        </section> </p>
+        </p>
 
     </article>
     
