--- a/1Post.html
+++ b/1Post.html
@@ -42,7 +42,7 @@
             This is me
         </h3>
         
-        <p>
+        <section>
             <p>
                 Honestly I find it particularly difficult to write this introductory post.
             </p>
@@ -82,7 +82,7 @@
                 I have always wanted to open a blog, write, and spark my creativity. 
                 So, now. Here I am...
             </p>
-        </p>
+        </section>
 
     </article>
     
