--- a/1Post.html
+++ b/1Post.html
@@ -6,6 +6,11 @@
     <title>G blog</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="immagini/icon.png" >
+    <style>
+    body {
+        padding-bottom: 100px; /* aumenta o diminuisci il valore */
+    }
+    </style>
 </head>
 
 <!-- Google tag (gtag.js) -->
