--- a/1Post.html
+++ b/1Post.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="immagini/icon.png" >
     <style>
-    body {
-        padding-bottom: 100px; /* aumenta o diminuisci il valore */
+    article {
+        margin-bottom: 100px;
     }
     </style>
 </head>
@@ -121,4 +121,5 @@
     </footer>
 </body>
     
+
 </html>
