--- a/1Post.html
+++ b/1Post.html
@@ -10,6 +10,9 @@
     article {
         margin-bottom: 100px;
     }
+    img {
+        margin-bottom: 20px;
+    }
     </style>
 </head>
 
@@ -123,3 +126,4 @@
     
 
 </html>
+
