--- a/1Post.html
+++ b/1Post.html
@@ -3,7 +3,7 @@
     
 <head>
     <meta charset="UTF-8">
-    <title>G blog</title>
+    <title>Giovanni Bonini - personal blog</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="immagini/icon.png" >
     <style>
@@ -12,9 +12,6 @@
     }
     img {
         margin-bottom: 20px;
-    }
-    h1 {
-        margin-bottom: 10px;
     }
     </style>
 </head>
@@ -129,5 +126,6 @@
     
 
 </html>
+
 
 
