--- a/1Post.html
+++ b/1Post.html
@@ -13,6 +13,9 @@
     img {
         margin-bottom: 20px;
     }
+    h3 {
+        margin-bottom: 10px;
+    }
     </style>
 </head>
 
@@ -126,6 +129,7 @@
     
 
 </html>
+
 
 
 
