--- a/1Post.html
+++ b/1Post.html
@@ -3,7 +3,7 @@
     
 <head>
     <meta charset="UTF-8">
-    <title>Giovanni Bonini - personal blog</title>
+    <title>GBlog</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="immagini/icon.png" >
     <style>
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <a href="index.html" id="img"><h1>G blog</h1></a>
+        <a href="index.html" id="img"><h1>GBlog</h1></a>
         <nobr>
             <nav>
                 <h2>Index</h2>
@@ -129,6 +129,7 @@
     
 
 </html>
+
 
 
 
