--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
     
 <head>
     <meta charset="UTF-8">
-    <title>G blog</title>
+    <title>GBlog</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contactstyle.css">
     <link rel="icon" href="immagini/icon.png" >
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <a href="index.html" id="img"><h1>G blog</h1></a>
+        <a href="index.html" id="img"><h1>GBlog</h1></a>
         <nobr>
             <nav>
                 <h2>Index</h2>
@@ -66,5 +66,6 @@
         
     </div>
 </body>
+
 
 </html>
