--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>G blog</title>
+    <title>GBlog</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="immagini/icon.png" >
 </head>
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <a href="index.html" id="img"><h1>G blog</h1></a>
+        <a href="index.html" id="img"><h1>GBlog</h1></a>
         <nobr>
             <nav>
                 <h2>Index</h2>
@@ -68,4 +68,5 @@
     </footer>
 </body>
     
+
 </html>
